--- a/hydro_gui.service
+++ b/hydro_gui.service
@@ -8,7 +8,7 @@ ExecStart=/home/tcar5787/Documents/hydromonitor_v2/venv/bin/python3 hydroponics_
 Restart=on-failure
 Type=simple
 StandardOutput=file:/home/tcar5787/Documents/hydromonitor_v2/logs/hydro_gui.log
-StandardError=file:/home/tcar5787/Documents/hydromonitor_v2/logs/hydro_gui_error.log
+StandardError=file:/home/tcar5787/Documents/hydromonitor_v2/logs/hydro_gui_error.logpip install 
 Environment="PYTHONUNBUFFERED=1"
 
 [Install]
