--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,7 @@ ardunio_code/.DS_Store
 # /hydro_dashboard
 /old
 firebaseKey.json
+/webserver/firebaseFetch.py
+/webserver/plotTheDaysData.py
+/webserver/localserver.py
+webserver/firebase-debug.log
